440384 - As an app developer, I want to get a new valid Session, for any User that logs in.
Delivers Task 1 - 401, as bonus 404 too
